--- a/pages/AboutUs/css/style.css
+++ b/pages/AboutUs/css/style.css
@@ -358,6 +358,10 @@ main {
     transition: 0.2s ease-in;
 }
 
+.catalog-link {
+    display: none;
+}
+
 .footer_section {
     position: relative;
     background: #60AECF;
