--- a/pages/Catalog/css/media.css
+++ b/pages/Catalog/css/media.css
@@ -117,9 +117,38 @@
     .ctlg_row {
         flex-wrap: wrap;
     }
+    .filtration_col.Active {
+        display: flex;
+        animation: appear 0.3s ease-in;
+    }
     .filtration_col {
+        display: none;
+        justify-content: center;
+        align-items: center;
+        position: fixed;
+        top: 0;
+        left: 0;
         flex-basis: 100%;
         padding: 0;
+        background: #fff;
+        z-index: 4;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.5);
+    }
+    .filtration_box {
+        padding: 30px 0;
+        overflow: auto;
+        width: 90%;
+        height: 80%;
+        background: #fff;
+        border-radius: 10px;
+    }
+    .filtration_box_inner {
+        padding: 10px;
+    }
+    .filtration_col_inner {
+        padding: 0 10px;
     }
     .products_col {
         flex-basis: 100%;
@@ -127,6 +156,24 @@
     }
     .catalog-link {
         display: block;
+    }
+    .products_filter_box {
+        display: flex;
+    }
+    .filter-popup-actions_box {
+        display: flex;
+    }
+}
+
+@media screen and (min-width: 950px) {
+    .filtration_col_inner:before {
+        content: "";
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 200%;
+        height: 2px;
+        background: rgba(116, 169, 193, 0.37);;
     }
 }
 
@@ -188,7 +235,7 @@
         font-size: 14px;
     }
     .sort_button {
-        font-size: 13px;
+        font-size: 11px;
     }
     .products_sort_box {
         gap: 8px;
@@ -264,6 +311,20 @@
     .product-to-cart_button {
         width: 100%;
     }
+    .filter_popup_btn {
+        font-size: 13px;
+    }
+    .include-only_title {
+        font-size: 13px;
+    }
+    .include-only_inner {
+        width: 50px;
+        height: 20px;
+    }
+    .include-only_toggler {
+        width: 20px;
+        height: 20px;
+    }
 }
 
 @media screen and (max-width: 500px) {
@@ -306,10 +367,17 @@
         padding: 0;
     }
     .filtration_box {
-        padding: 0;
+        padding: 30px 0 0;
+        width: 95%;
     }
     .ctlg_routes {
         font-size: 14px;
+    }
+    .apply-filter_button {
+        font-size: 13px;
+    }
+    .cancel-filter_button {
+        font-size: 13px;
     }
 }
 
@@ -326,9 +394,15 @@
     .products_sort_title {
         font-size: 12px;
     }
+    .filter_popup_btn {
+        font-size: 11px;
+    }
+    .product-to-cart_button {
+        padding: 8px 16px;
+    }
 }
 
-@media screen and (max-width: 360px) {
+@media screen and (max-width: 320px) {
     .products_inner_col {
         flex-basis: 100%;
     }
