--- a/pages/Catalog/css/style.css
+++ b/pages/Catalog/css/style.css
@@ -1,6 +1,9 @@
 body {
-    min-width: 320px;
+    min-width: 330px;
     min-height: 100%;
+}
+body.Noscroll {
+    overflow: hidden;
 }
 
 html {
@@ -649,22 +652,44 @@ main {
     height: 100%;
 }
 
+.filter-popup-actions_box {
+    display: none;
+    gap: 10px;
+    align-self: flex-start;
+    padding: 20px;
+    flex-grow: 1;
+}
+
+.apply-filter_button {
+    padding: 10px 15px;
+    font-family: 'Inter', sans-serif;
+    font-weight: 500;
+    font-size: 15px;
+    background: rgba(116, 169, 193, 1);
+    color: #fff;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+}
+
+.cancel-filter_button {
+    padding: 10px 15px;
+    font-family: 'Inter', sans-serif;
+    font-weight: 500;
+    font-size: 15px;
+    background: #fff;
+    border: none;
+    color: #000;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
 .filtration_col_inner {
     position: relative;
     padding: 25px 0;
     display: flex;
     flex-direction: column;
     width: 100%;
-}
-
-.filtration_col_inner:before {
-    content: "";
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 200%;
-    height: 2px;
-    background: rgba(116, 169, 193, 0.37);;
 }
 
 .filtration_box_inner {
@@ -677,6 +702,7 @@ main {
     display: flex;
     align-items: center;
     gap: 15px;
+    cursor: pointer;
 }
 
 .filter_name {
@@ -684,9 +710,9 @@ main {
     font-weight: 500;
     font-size: 22px;
     color: rgba(116, 169, 193, 1);
-    cursor: pointer;
     border: none;
     background: none;
+    cursor: pointer;
 }
 
 .filter_chevron {
@@ -860,6 +886,25 @@ main {
     height: 100%;
 }
 
+.products_filter_box {
+    display: none;
+    width: 100%;
+    margin: 10px 0;
+}
+
+.filter_popup_btn {
+    width: 100%;
+    padding: 10px 12px;
+    border: none;
+    background: rgba(116, 169, 193, 1);
+    font-family: 'Inter', sans-serif;
+    font-weight: 500;
+    font-size: 15px;
+    color: #fff;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
 .products_banner_box {
     display: flex;
     flex-direction: column;
@@ -902,6 +947,10 @@ main {
     transition: 0.1s ease-in;
 }
 
+.products_inner_box.Hidden {
+    display: none;
+    animation: appear 0.3s ease-in;
+}
 .products_inner_box {
     margin-top: 30px;
     display: flex;
