--- a/pages/Catalog/css/style.css
+++ b/pages/Catalog/css/style.css
@@ -641,10 +641,11 @@ main {
 }
 
 .filtration_col {
-    padding: 30px;
+    padding: 10px 30px;
 }
 
 .filtration_box {
+    position: relative;
     padding: 10px;
     display: flex;
     flex-direction: column;
@@ -654,6 +655,7 @@ main {
 
 .filter-popup-actions_box {
     display: none;
+    align-items: flex-end;
     gap: 10px;
     align-self: flex-start;
     padding: 20px;
@@ -684,9 +686,21 @@ main {
     cursor: pointer;
 }
 
+.close-filter-popup_button {
+    display: none;
+    position: absolute;
+    top: 2%;
+    right: 2%;
+    border: none;
+    background: none;
+    font-size: 22px;
+    z-index: 4;
+    cursor: pointer;
+}
+
 .filtration_col_inner {
     position: relative;
-    padding: 25px 0;
+    padding: 15px 0;
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -695,7 +709,7 @@ main {
 .filtration_box_inner {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 10px;
 }
 
 .filter_box {
@@ -746,15 +760,54 @@ main {
     gap: 15px;
 }
 
+.filter_checkbox_wrapper {
+    display: block;
+    position: relative;
+    cursor: pointer;
+    user-select: none;
+}
+
 .filter_checkbox {
+    opacity: 0;
     width: 20px;
     height: 20px;
 }
+.checkmark.Active {
+    background: rgba(116, 169, 193, 1);
+    transition: 0.2s;
+}
+.checkmark.Active:after {
+    content: "\f00c";
+    font-family: 'Font Awesome 5 Free';
+    font-weight: 900;
+    position: absolute;
+    top: 12%;
+    left: 22%;
+    color: #fff;
+    font-size: 13px;
+}
+.checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 20px;
+    height: 20px;
+    background: #fff;
+    border: 2px solid rgba(116, 169, 193, 1);
+    border-radius: 3px;
+    transition: 0.2s;
+}
 
+.filter_option_name.Active {
+    color: #000;
+    transition: 0.2s ease-in;
+}
 .filter_option_name {
     font-family: 'Inter', sans-serif;
     font-weight: 500;
     font-size: 14px;
+    color: rgba(165, 165, 165, 1);
+    transition: 0.2s;
 }
 
 .filter_price_inner {
@@ -875,7 +928,7 @@ main {
 }
 
 .products_col {
-    padding: 40px;
+    padding: 10px 40px;
 }
 
 .products_box {
@@ -945,6 +998,11 @@ main {
     background: none;
     cursor: pointer;
     transition: 0.1s ease-in;
+}
+
+.products_inner_wrapper_box {
+    display: flex;
+    flex-direction: column;
 }
 
 .products_inner_box.Hidden {
