--- a/pages/Catalog/css/style.css
+++ b/pages/Catalog/css/style.css
@@ -982,19 +982,19 @@ main {
 }
 
 .sort_button.Active {
-    background: rgba(116, 169, 193, 1);
+    border: 2px solid rgba(116, 169, 193, 1);
     transition: 0.1s ease-in;
     padding: 8px 20px;
-    color: #fff;
+    color: rgba(116, 169, 193, 1);
     border-radius: 99em;
 }
 .sort_button {
+    border: 2px solid rgba(0, 0, 0, 0.0);
     padding: 8px 20px;
     font-family: 'Inter', sans-serif;
     font-weight: 500;
     font-size: 16px;
     color: #000;
-    border: none;
     background: none;
     cursor: pointer;
     transition: 0.1s ease-in;
