--- a/pages/Catalog/css/style.css
+++ b/pages/Catalog/css/style.css
@@ -337,6 +337,7 @@ main {
     background: none;
     text-align: left;
     flex-grow: 1;
+    text-decoration: none;
 }
 
 .popup_box_routes_box.Active {
