--- a/pages/Contacts/css/style.css
+++ b/pages/Contacts/css/style.css
@@ -310,6 +310,7 @@ main {
     background: none;
     text-align: left;
     flex-grow: 1;
+    text-decoration: none;
 }
 
 .popup_box_routes_box.Active {
