--- a/pages/Catalog/css/media.css
+++ b/pages/Catalog/css/media.css
@@ -197,6 +197,14 @@
         align-items: flex-start;
         width: 50%;
     }
+    .products_banner_box {
+        margin-bottom: 0;
+        padding: 0;
+    }
+    .products_inner_box {
+        margin-top: 0;
+        padding: 20px 0;
+    }
 }
 
 @media screen and (min-width: 950px) {
@@ -391,6 +399,9 @@
         font-size: 16px;
         color: gray;
     }
+    .products_banner_box {
+        height: 110px;
+    }
 }
 
 @media screen and (max-width: 500px) {
@@ -468,6 +479,21 @@
     }
     .product-to-cart_button {
         padding: 8px 16px;
+    }
+    .products_banner_box {
+        height: 90px;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .products_banner_box {
+        height: 80px;
+    }
+}
+
+@media screen and (max-width: 360px) {
+    .products_banner_box {
+        height: 70px;
     }
 }
 
